--- a/aad_simulation/SpecialeSimulation.vcxproj
+++ b/aad_simulation/SpecialeSimulation.vcxproj
@@ -147,6 +147,7 @@
     <ClCompile Include="Utils.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Blocklist.h" />
     <ClInclude Include="Model.h" />
     <ClInclude Include="Node.h" />
     <ClInclude Include="Number.h" />
